<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ExtendedAPI</string>
   
    <string name="warning">Warning</string>
    <string name="confirm">confirm</string>
    <string name="dev_not_found">Sensor not found!!</string>
    <string name="dialog_warning">Warning</string>
    <string name="btn_quit">Quit</string>
    <string name="out_of_date">Out of date</string>
    <string name="command_error">send command failed</string>
    <string name="usb_disconnect_msg">device has been disconnected</string>
    <!-- dialog_type是配置设备未连接时，sdk的提示行为， 0表示未连接设备时，常提示，1表示点击确认后提示消失， -->
    <string name="dialog_behavior">0</string>

    <string name="snStr">Serial number</string>
    <string name="devTypeStr">Device type</string>
    <string name="gainStr"> Gain </string>
    <string name="exposure">Exposure</string>

    <string name="enableLaser">Enable Laser</string>
    <string name="enableLDP">Enable LDP</string>
    <string name="enableIrFlood">Enable Ir Flood</string>>
</resources>
